Added tonaljs and made the whole thing better. Scales are playing right but chords are not.

--- a/src/index.html
+++ b/src/index.html
@@ -10,22 +10,7 @@
     <h1>Guitar Chords Tool</h1>
     <div>
         <label for="scale">Scale:</label>
-        <select id="scale" onchange="updateKeys()">
-            <option value="major">Major</option>
-            <option value="minor">Minor</option>
-            <option value="harmonicMinor">Harmonic Minor</option>
-            <option value="melodicMinor">Melodic Minor</option>
-            <option value="majorPentatonic">Major Pentatonic</option>
-            <option value="minorPentatonic">Minor Pentatonic</option>
-            <option value="blues">Blues</option>
-            <option value="lydian">Lydian</option>
-            <option value="mixolydian">Mixolydian</option>
-            <option value="dorian">Dorian</option>
-            <option value="phrygian">Phrygian</option>
-            <option value="locrian">Locrian</option>
-            <option value="hungarian">Hungarian</option>
-            <option value="japanese">Japanese</option>
-        </select>
+        <select id="scale"></select>
     </div>
     <div>
         <label for="key">Key:</label>
