Managed to get triads working

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
         <select id="scale"></select>
     </div>
     <div>
-        <label for="key">Key:</label>
-        <select id="key" onchange="displayChords()"></select>
+        <label for="tonic">Tonic:</label>
+        <select id="tonic" onchange="displayChords()"></select>
     </div>
     <div>
         <label for="playModeChord">Chord</label>
